--- a/Project/app/src/main/res/layout/edit_assignment.xml
+++ b/Project/app/src/main/res/layout/edit_assignment.xml
@@ -33,10 +33,11 @@
             android:layout_height="45sp"
             android:ems="10"
             android:layout_weight="1"
-            android:background="@drawable/common_box"
+            android:background="@drawable/gray_common_box"
             android:paddingLeft="10dp"
             android:enabled="false"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:id="@+id/txt_class_id"/>
 
     </LinearLayout>
 
@@ -60,10 +61,11 @@
             android:layout_height="45sp"
             android:ems="10"
             android:layout_weight="1"
-            android:background="@drawable/common_box"
+            android:background="@drawable/gray_common_box"
             android:paddingLeft="10dp"
             android:enabled="false"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:id="@id/txt_class_name"/>
 
     </LinearLayout>
 
@@ -87,10 +89,11 @@
             android:layout_height="45sp"
             android:ems="10"
             android:layout_weight="1"
-            android:background="@drawable/common_box"
+            android:background="@drawable/gray_common_box"
             android:paddingLeft="10dp"
             android:enabled="false"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:id="@+id/txt_module_id"/>
 
     </LinearLayout>
 
@@ -114,10 +117,11 @@
             android:layout_height="45sp"
             android:ems="10"
             android:layout_weight="1"
-            android:background="@drawable/common_box"
+            android:background="@drawable/gray_common_box"
             android:paddingLeft="10dp"
             android:enabled="false"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:id="@+id/txt_module_name"/>
 
     </LinearLayout>
 
@@ -144,7 +148,7 @@
             android:orientation="horizontal">
 
             <Spinner
-                android:id="@+id/spinner_class"
+                android:id="@+id/spinner_trainer_id"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_centerVertical="true"
