--- a/Project/app/src/main/res/layout/add_question.xml
+++ b/Project/app/src/main/res/layout/add_question.xml
@@ -11,7 +11,8 @@
         android:padding="30dp"
         android:textSize="35sp"
         android:textStyle="bold"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:id="@+id/txt_title"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,10 +35,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/common_box"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/spinner_topic_box">
 
             <Spinner
-                android:id="@+id/spinner_class"
+                android:id="@+id/spinner_topic_name"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
                 android:layout_centerVertical="true"
@@ -71,6 +73,16 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:background="@drawable/gray_common_box"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:gravity="left|center_vertical"
+            android:padding="10dp"
+            android:id="@+id/txt_topic_name"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -89,7 +101,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editTextTextMultiLine"
+            android:id="@+id/edt_question_content"
             android:layout_width="match_parent"
             android:layout_height="276dp"
             android:background="@drawable/common_box"
@@ -122,7 +134,8 @@
             android:layout_marginRight="20dp"
             android:backgroundTint="@color/add_button_color"
             android:hint="Save"
-            android:textColorHint="@color/white"/>
+            android:textColorHint="@color/white"
+            android:id="@+id/btn_save"/>
 
         <Button
             android:layout_width="wrap_content"
@@ -130,7 +143,8 @@
             android:layout_marginRight="40dp"
             android:backgroundTint="@color/delete_button_color"
             android:hint="Back"
-            android:textColorHint="@color/white"/>
+            android:textColorHint="@color/white"
+            android:id="@+id/btn_back"/>
 
     </LinearLayout>
 
