--- a/Project/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/app/src/main/res/navigation/mobile_navigation.xml
@@ -86,13 +86,14 @@
         tools:layout="@layout/fragment_result" />
 
     <fragment
-        android:id="@+id/navquestion"
+        android:id="@+id/nav_question"
         android:name="com.gaf.project.fragment.QuestionFragment"
         android:label="fragment_question"
-        tools:layout="@layout/fragment_question" />
+        tools:layout="@layout/fragment_question" >
         <action
             android:id="@+id/action_nav_question_to_add_question_fragment"
             app:destination="@id/add_question_fragment" />
+    </fragment>
 <!--    </fragment>-->
 
     <fragment
@@ -120,7 +121,8 @@
     <fragment
         android:id="@+id/add_question_fragment"
         android:name="com.gaf.project.fragment.AddQuestionFragment"
-        android:label="AddQuestionFragment" />
+        android:label="AddQuestionFragment"
+        tools:layout="@layout/add_question"/>
 
     <fragment
         android:id="@+id/add_class_fragment"
