--- a/Project/app/src/main/res/values/colors.xml
+++ b/Project/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="red">#ff0403</color>
     <color name="blue">#3466ff</color>
     <color name="green">#51f656</color>
+    <color name="gray_200">#f2f2f2</color>
 
     <color name="main_color">#fd3c01</color>
     <color name="item_background">#ffeacb</color>
