--- a/Project/app/src/main/res/layout/simple_list_item_dropdown.xml
+++ b/Project/app/src/main/res/layout/simple_list_item_dropdown.xml
@@ -7,5 +7,6 @@
     android:paddingBottom="5dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
+    android:background="@color/item_background"
     android:paddingTop="5dp"
     android:singleLine="true" />
