--- a/Project/app/src/main/res/layout/item_class.xml
+++ b/Project/app/src/main/res/layout/item_class.xml
@@ -25,7 +25,7 @@
                 style="@style/TextViewStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Class ID" />
+                android:text="Class ID: " />
 
             <TextView
                 android:id="@+id/txt_class_id"
@@ -63,7 +63,7 @@
                 style="@style/TextViewStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Capacity" />
+                android:text="Capacity: " />
 
             <TextView
                 android:id="@+id/txt_capacity"
