--- a/Project/app/src/main/res/layout/fragment_class.xml
+++ b/Project/app/src/main/res/layout/fragment_class.xml
@@ -26,7 +26,7 @@
             android:layout_height="48dp"
             android:id="@+id/btn_add_class"
             style="@style/Widget.MaterialComponents.Button.Icon"
-            app:icon="@drawable/ic_menu_camera"
+            app:icon="@drawable/ic_baseline_add_24"
             app:iconSize="24dp"
             app:iconPadding="0dp"
             android:insetLeft="0dp"
