--- a/Project/app/src/main/res/layout/fragment_add_class.xml
+++ b/Project/app/src/main/res/layout/fragment_add_class.xml
@@ -47,7 +47,8 @@
             android:layout_height="wrap_content"
             android:text="Please enter class name and less than 255 character"
             android:textColor="@color/red"
-            android:visibility="visible"/>
+            android:visibility="gone"
+            android:id="@+id/txt_class_name_warning"/>
     </LinearLayout>
 
     <LinearLayout
@@ -81,7 +82,8 @@
             android:layout_height="wrap_content"
             android:text="Please enter capicity in integer and larger than 0"
             android:textColor="@color/red"
-            android:visibility="visible"/>
+            android:visibility="gone"
+            android:id="@+id/txt_capacity_warning"/>
     </LinearLayout>
 
     <LinearLayout
@@ -132,7 +134,8 @@
             android:layout_height="wrap_content"
             android:text="Please choose date or fill mm/dd/yyyy"
             android:textColor="@color/red"
-            android:visibility="visible"/>
+            android:visibility="gone"
+            android:id="@+id/txt_start_date_warning"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -182,7 +185,8 @@
             android:layout_height="wrap_content"
             android:text="Please choose date or fill mm/dd/yyyy"
             android:textColor="@color/red"
-            android:visibility="visible"/>
+            android:visibility="gone"
+            android:id="@+id/txt_end_date_warning"/>
     </LinearLayout>
 
     <LinearLayout
