--- a/Project/app/src/main/res/layout/fragment_assignment.xml
+++ b/Project/app/src/main/res/layout/fragment_assignment.xml
@@ -47,7 +47,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingBottom="20dp">
+            android:paddingBottom="20dp"
+            android:id="@+id/search_field">
 
             <EditText
                 android:layout_width="wrap_content"
