--- a/Project/app/src/main/res/layout/fragment_class.xml
+++ b/Project/app/src/main/res/layout/fragment_class.xml
@@ -19,7 +19,8 @@
             android:text="Class"
             android:padding="20dp"
             android:textSize="40sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            android:id="@+id/txt_title"/>
 
         <com.google.android.material.button.MaterialButton
             android:layout_width="48dp"
