--- a/Project/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/app/src/main/res/navigation/mobile_navigation.xml
@@ -108,8 +108,12 @@
     <fragment
         android:id="@+id/review_feedback_fragment"
         android:name="com.gaf.project.fragment.ReviewFeedbackFragment"
-        android:label="review_feeback"
-        tools:layout="@layout/review_feeback" />
+        android:label="review_feedback"
+        tools:layout="@layout/review_feedback" >
+        <action
+            android:id="@+id/action_review_feedback_fragment_to_add_feedback_fragment"
+            app:destination="@id/add_feedback_fragment" />
+    </fragment>
 
 
     <fragment
