--- a/Project/app/src/main/res/layout/add_feedback.xml
+++ b/Project/app/src/main/res/layout/add_feedback.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/add_feedback_fragment"
     android:orientation="vertical"
-    tools:context=".fragment.FeedBackFragment">
+    tools:context=".fragment.AddFeedBackFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
