--- a/Project/app/src/main/res/layout/item_class.xml
+++ b/Project/app/src/main/res/layout/item_class.xml
@@ -34,7 +34,6 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,6 +52,11 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/lnr_admin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -72,7 +76,6 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -108,6 +111,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+        </LinearLayout>
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/lnr_number_of_trainee"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                style="@style/TextViewStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Number of Trainee: " />
+
+            <TextView
+                android:id="@+id/txt_number_of_trainee"
+                style="@style/TextItemStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
     </LinearLayout>
