--- a/Project/app/src/main/res/values/style.xml
+++ b/Project/app/src/main/res/values/style.xml
@@ -17,6 +17,10 @@
         <item name="android:textSize">20dp</item>
         <item name="color">@color/black</item>
     </style>
+    <style name="TextItemClassStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">20dp</item>
+        <item name="android:textColor">@color/red</item>
+    </style>
 
     <style name="ButtonRounded" parent="">
         <item name="cornerFamily">rounded</item>
