--- a/Project/app/src/main/res/layout/item_feedback.xml
+++ b/Project/app/src/main/res/layout/item_feedback.xml
@@ -122,6 +122,7 @@
             android:backgroundTint="@color/edit_button_color"/>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_delete_feedback"
             android:layout_width="48dp"
             android:layout_height="48dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
