--- a/Project/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Project/app/src/main/res/navigation/mobile_navigation.xml
@@ -145,7 +145,7 @@
         android:label="EditAssignmentFragment" />
     <fragment
         android:id="@+id/nav_trainee_home_fragment"
-        android:name="com.gaf.project.TraineeHomeFragment"
+        android:name="com.gaf.project.fragment.TraineeHomeFragment"
         android:label="fragment_trainee_home"
         tools:layout="@layout/fragment_trainee_home" />
     <fragment
