--- a/Project/app/src/main/res/layout/item_module.xml
+++ b/Project/app/src/main/res/layout/item_module.xml
@@ -129,7 +129,7 @@
 
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -147,7 +147,7 @@
 
         </LinearLayout>
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -175,7 +175,7 @@
         android:layout_alignParentRight="true">
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_add_module"
+            android:id="@+id/btn_edit_module"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_marginBottom="5dp"
@@ -191,7 +191,7 @@
             android:backgroundTint="@color/edit_button_color"/>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_edit_module"
+            android:id="@+id/btn_delete_module"
             android:layout_width="48dp"
             android:layout_height="48dp"
             style="@style/Widget.MaterialComponents.Button.Icon"
