--- a/Project/app/src/main/res/layout/fragment_add_module.xml
+++ b/Project/app/src/main/res/layout/fragment_add_module.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add Module List"
-        android:padding="30dp"
+        android:padding="20dp"
         android:textSize="35sp"
         android:textStyle="bold"
         android:textAlignment="center"
@@ -22,33 +22,33 @@
         android:orientation="vertical"
         android:paddingLeft="40dp"
         android:paddingRight="30dp"
-        android:paddingBottom="20dp">
+        android:paddingBottom="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Module Name:"
-            android:textSize="17sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:paddingBottom="5dp"/>
 
         <EditText
             android:background="@drawable/common_box"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="30dp"
             android:id="@+id/txt_module_name"
             android:layout_gravity="center"
             android:paddingLeft="5dp"
             android:inputType="text"
             android:imeOptions="actionDone"
-            android:hint="Class name"/>
+            android:hint="Module name"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Please enter class name and less than 255 character"
             android:textColor="@color/red"
             android:visibility="gone"
-            android:id="@+id/txt_class_name_warning"/>
+            android:id="@+id/txt_module_name_warning"/>
     </LinearLayout>
 
 
@@ -59,13 +59,13 @@
         android:orientation="vertical"
         android:paddingLeft="40dp"
         android:paddingRight="30dp"
-        android:paddingBottom="20dp">
+        android:paddingBottom="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Start Date:"
-            android:textSize="17sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:paddingBottom="5dp"/>
 
@@ -78,7 +78,7 @@
             <TextView
                 android:id="@+id/txt_start_date"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
 
@@ -90,7 +90,7 @@
             <ImageButton
                 android:id="@+id/btn_add_start_date"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_baseline_calendar_today_24" />
@@ -110,13 +110,13 @@
         android:orientation="vertical"
         android:paddingLeft="40dp"
         android:paddingRight="30dp"
-        android:paddingBottom="20dp">
+        android:paddingBottom="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="End Date:"
-            android:textSize="17sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:paddingBottom="5dp"/>
 
@@ -129,7 +129,7 @@
             <TextView
                 android:id="@+id/txt_end_date"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
 
@@ -141,7 +141,7 @@
             <ImageButton
                 android:id="@+id/btn_add_end_date"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_baseline_calendar_today_24" />
@@ -161,26 +161,83 @@
         android:orientation="vertical"
         android:paddingLeft="40dp"
         android:paddingRight="30dp"
-        android:paddingBottom="20dp">
+        android:paddingBottom="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Admin ID"
-            android:textSize="17sp"
+            android:textSize="15sp"
             android:textStyle="bold"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@drawable/common_box"
             android:orientation="horizontal">
 
             <Spinner
                 android:id="@+id/spinner_admin_id"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="30dp"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:background="@android:color/transparent"
+                android:gravity="center"
+                android:layout_marginLeft="5dp"
+                android:spinnerMode="dropdown"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_arrow_drop_up_24"
+                    android:layout_marginBottom="-3dp"
+                    android:layout_marginTop="-17dp"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_baseline_arrow_drop_down_24"
+                    android:layout_marginTop="-15dp"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingBottom="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Feedback Title"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/common_box"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/spinner_feedbacktitle"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
                 android:background="@android:color/transparent"
@@ -219,57 +276,101 @@
         android:orientation="vertical"
         android:paddingLeft="40dp"
         android:paddingRight="30dp"
-        android:paddingBottom="20dp">
+        android:paddingBottom="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Feedback Title"
-            android:textSize="17sp"
-            android:textStyle="bold"/>
+            android:text="Feedback Start Date:"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:paddingBottom="5dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:background="@drawable/common_box"
             android:orientation="horizontal">
 
-            <Spinner
-                android:id="@+id/spinner_feedbacktitle"
+            <TextView
+                android:id="@+id/txt_feedback_start_date"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
-                android:layout_centerVertical="true"
+                android:layout_height="30dp"
                 android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:gravity="center"
                 android:layout_marginLeft="5dp"
-                android:spinnerMode="dropdown"/>
 
-            <LinearLayout
+                android:gravity="center_vertical"
+                android:layout_toLeftOf="@+id/btn_add_feedback_start_date"
+                android:background="@android:color/transparent"
+                android:hint="mm/dd/yyyy" />
+
+            <ImageButton
+                android:id="@+id/btn_add_feedback_start_date"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_height="30dp"
                 android:layout_alignParentRight="true"
-                android:layout_centerVertical="true">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_arrow_drop_up_24"
-                    android:layout_marginBottom="-3dp"
-                    android:layout_marginTop="-17dp"/>
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_arrow_drop_down_24"
-                    android:layout_marginTop="-15dp"/>
-
-            </LinearLayout>
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_baseline_calendar_today_24" />
 
         </RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Please choose date or fill mm/dd/yyyy"
+            android:textColor="@color/red"
+            android:visibility="gone"
+            android:id="@+id/txt_feedback_start_date_warning"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingLeft="40dp"
+        android:paddingRight="30dp"
+        android:paddingBottom="15dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Feedback End Date:"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:paddingBottom="5dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/common_box"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_feedback_end_date"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="5dp"
+
+                android:gravity="center_vertical"
+                android:layout_toLeftOf="@+id/btn_add_feedback_end_date"
+                android:background="@android:color/transparent"
+                android:hint="mm/dd/yyyy" />
+
+            <ImageButton
+                android:id="@+id/btn_add_feedback_end_date"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:src="@drawable/ic_baseline_calendar_today_24" />
+
+        </RelativeLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Please choose date or fill mm/dd/yyyy"
+            android:textColor="@color/red"
+            android:visibility="gone"
+            android:id="@+id/txt_feedbac_end_date_warning"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -278,7 +379,7 @@
         android:gravity="right|center">
 
         <Button
-            android:id="@+id/btn_save_class"
+            android:id="@+id/btn_save_module"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
