--- a/Project/app/src/main/res/layout/fragment_pie_chart2.xml
+++ b/Project/app/src/main/res/layout/fragment_pie_chart2.xml
@@ -23,6 +23,16 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tvTest"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Test"
+        android:textSize="30sp"
+        android:textColor="@color/search_box_border"
+        android:gravity="center"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
