--- a/Project/app/src/main/res/layout/item_question.xml
+++ b/Project/app/src/main/res/layout/item_question.xml
@@ -74,7 +74,7 @@
 
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -91,7 +91,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
 
