--- a/Project/app/src/main/res/layout/fragment_feed_back.xml
+++ b/Project/app/src/main/res/layout/fragment_feed_back.xml
@@ -31,7 +31,7 @@
                 android:layout_height="48dp"
                 android:id="@+id/btn_add_feedback"
                 style="@style/Widget.MaterialComponents.Button.Icon"
-                app:icon="@drawable/ic_menu_camera"
+                app:icon="@drawable/ic_baseline_add_24"
                 app:iconSize="24dp"
                 app:iconPadding="0dp"
                 android:insetLeft="0dp"
